--- a/frontend/art_frontend/src/App.css
+++ b/frontend/art_frontend/src/App.css
@@ -1,4 +1,5 @@
 .App {
-    background-color: #444554ff;
-    height: 100vh;
+    background-color: #444554ff/*rgba(68, 69, 84, 0.541)*/;
+    height: 100%;
+    overflow-y: auto;
 }
